<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.moein.expensetracker</groupId>
	<artifactId>personal-spending-tracker</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Personal Spending Tracker</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<testcontainers.version>1.21.4</testcontainers.version>
		<jacoco.version>0.8.13</jacoco.version>
		<argLine></argLine>
	</properties>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.2.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.12.7</version>
		</dependency>

		<dependency>
			<groupId>de.bwaldvogel</groupId>
			<artifactId>mongo-java-server</artifactId>
			<version>1.11.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mongodb</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-swing-junit</artifactId>
			<version>3.17.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>add-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/it/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>@{argLine} --add-opens
						java.base/java.util=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>@{argLine} --add-opens
						java.base/java.util=ALL-UNNAMED</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>5.2.0.4988</version>
			</plugin>

		</plugins>
	</build>

	<profiles>

		<profile>
			<id>jacoco</id>

			<build>
				<plugins>

					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>

						<executions>

							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>

							<execution>
								<id>report</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>

						</executions>
					</plugin>

				</plugins>
			</build>

		</profile>

		<profile>
			<id>mutation-testing</id>

			<build>
				<plugins>

					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<version>1.17.3</version>

						<configuration>

							<targetClasses>
								<param>com.moein.expensetracker.model.*</param>
								<param>com.moein.expensetracker.controller.*</param>
								<param>com.moein.expensetracker.service.*</param>
								<param>
									com.moein.expensetracker.repository.mongo.*</param>
							</targetClasses>

							<targetTests>
								<param>com.moein.expensetracker.model.*</param>
								<param>com.moein.expensetracker.controller.*</param>
								<param>com.moein.expensetracker.service.*</param>
								<param>
									com.moein.expensetracker.repository.mongo.*</param>
							</targetTests>

							<mutators>
								<mutator>DEFAULTS</mutator>
							</mutators>

							<mutationThreshold>100</mutationThreshold>

						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>

	</profiles>

</project>